update response order detail